Addressing review comments + rebase main
Signed-off-by: kh3ra <adityakh3ra@gmail.com>